update-feat-send-email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.mail.host=localhost
-spring.mail.port=1025
-spring.mail.username=hello
-spring.mail.password=hello
-spring.mail.properties.mail.smtp.ssl.trust="*"
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=eshop27test@gmail.com
+spring.mail.password=mborsyryruuaogqj
+#spring.mail.properties.mail.smtp.ssl.trust="*"
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.startttls.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=3000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=3000
+#spring.mail.properties.mail.smtp.writetimeout=5000
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -33,3 +33,5 @@ spring.elasticsearch.socket-keep-alive=true
 
 server.error.whitelabel.enabled=false
 server.error.path=/error
+
+logging.level.com.springboot.ecommerce=DEBUG
