--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,18 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=eshop27test@gmail.com
 spring.mail.password=mborsyryruuaogqj
-#spring.mail.properties.mail.smtp.ssl.trust="*"
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.connectiontimeout=5000
-#spring.mail.properties.mail.smtp.timeout=3000
-#spring.mail.properties.mail.smtp.writetimeout=5000
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/web7_2024
 spring.datasource.username=postgres
 spring.datasource.password=123456789
+spring.datasource.hikari.auto-commit=false
 
 
 spring.session.timeout=60m
